# foundation-model-benchmarking-tool

./: .gitignore  0_setup.ipynb  1_deploy_model.ipynb  1_generate_data.ipynb  2_deploy_model.ipynb  2_generate_data.ipynb  3_run_inference (2).ipynb  3_run_inference.ipynb  404.html  4_model_metric_analysis.ipynb  5_cleanup.ipynb  5_cleanup.py  CITATION.cff  Dockerfile  EC2_system_metrics.csv  MANIFEST.in  README.md  README_ec2  README_ec2.md  README_pypi.md  THIRD_PARTY_LICENSES copy.txt  THIRD_PARTY_LICENSES.txt  Untitled.ipynb  accuracy.html  advanced.html  analytics.html  analytics.py  announcement.html  benchmarking.html  benchmarking_multimodal_models_on_bedrock.html  benchmarking_on_bedrock.html  benchmarking_on_ec2.html  benchmarking_on_eks.html  benchmarking_on_sagemaker.html  build.html  byo_dataset.html  byo_rest_predictor.html  byoe.html  check_s3_content.sh  cli.html  (+44 more)
analytics/: analytics.py  sagemaker_cost_rpm_plot.py  sagemaker_metrics_plot.py  scratchpad.ipynb
configs/: config-llama2-13b-inf2-g5-p4d-v1.yml  config-llama2-70b-g5-p4d-tgi.yml  config-llama2-70b-g5-p4d-trt.yml  config-mistral-7b-tgi-g5.yml  pricing.yml  pricing_fallback.yml
configs/NousResearchHermes70B/: config-Nous-Hermes3-1-70b-g5.48xl-tp-8-mc-max-djl.yml  config-Nous-Hermes3-1-70b-inf2.48xl-triton-tp24.yml  config-Nous-Hermes3-1-70b-trn1.32xl-deploy-ec2-triton.yml
configs/bedrock/: config-bedrock-haiku-sonnet-majority-voting.yml  config-bedrock-llama3-1-70b-streaming.yml  config-bedrock-llama3-1-no-streaming.yml  config-bedrock-llama3-2.yml  config-bedrock-llama3-streaming.yml  config-bedrock-llama3.yml  config-bedrock.yml  config-claude-3-5-sonnet-v2.yml  config-claude-dolly-dataset.yml  config-llama-3-2-11b-databricks-dolly-15k.yml  config-nova-all-models-dolly-dataset.yml  config-nova-all-models-openarca.yml
configs/byoe/: config-byo-custom-rest-predictor.yml
configs/deepseek/: config-deepseek-r1-quant1.58-longbench-byoe.yml  config-deepseek-r1-sglang.yml  config-deepseek-r1-vllm-longbench.yml
configs/embeddings/: bge-base-en-v1-5-g5-g4dn-c7-embeddings.yml
configs/gemma/: config-gemma-2b-g5.yml
configs/llama3.2/: config-llama3.2-11b-g6e-2xl-tp-1-mc-max-djl-vllm-ec2.yml  config-llama3.2-1b-g5.4xl-tp-1-mc-max-djl-ec2.yml  config-llama3.2-3b-g5.4xl-tp-1-mc-max-djl-ec2.yml  config-llama3.2-3b-g5.4xl-tp-1-mc-max-triton-ec2.yml
configs/llama4/: config-llama4-scout-17b-g6e-longbench-vllm.yml
configs/mistral/: config-mistral-instruct-AWQ-p4d.yml  config-mistral-instruct-v2-p4d-trtllm.yml  config-mistral-instruct-v2-p5-lmi-dist.yml  config-mistral-instruct-v2-p5-trtllm.yml  config-mistral-trn1-32xl-deploy-ec2-tp32.yml  config-mistral-v3-inf2-48xl-deploy-ec2-tp24.yml
configs/phi/: config-phi-3-g5.yml
docs/: accuracy.md  advanced.md  analytics.md  announcement.md  benchmarking.md  benchmarking_multimodal_models_on_bedrock.md  benchmarking_non_aws_models.md  benchmarking_on_bedrock.md  benchmarking_on_ec2.md  benchmarking_on_eks.md  benchmarking_on_sagemaker.md  benchmarking_openai_gemini_models.md  build.md  byo_dataset.md  byo_rest_predictor.md  byoe.md  cli.md  configs  customize_config_files.md  deepseek.md  ec2.md  features.md  gettingstarted.md  home.md  index.md  internal_website.md  manifest.md  mm_copies.md  neuron.md  quarto.md  quickstart.md  releases.md  resources.md  results.md  run_as_container.md  simplified_config_files.md  website.md  workflow.md
docs/misc/: ec2_instance_creation_steps.md
fmbench/: 0_setup.ipynb  1_generate_data.ipynb  2_deploy_model.ipynb  3_run_inference.ipynb  4_get_evaluations.ipynb  5_model_metric_analysis.ipynb  6_cleanup.ipynb  __init__.py  config_filepath.txt  defaults.py  globals.py  main.py  requirements.txt  utils.py
fmbench/configs/: model_eval_all_info.yml  pricing.yml  pricing_fallback.yml
fmbench/prompt_template/: prompt_template_claude_dolly_dataset.txt  prompt_template_convfinqa.txt  prompt_template_deepseek_longbench.txt  prompt_template_llama2_Mistral_OpenOrca.txt  prompt_template_llama3_OpenOrca.txt  prompt_template_llama3_databricks-dolly-15k.txt  prompt_template_llama3_images_ScienceQA.txt  prompt_template_llama3_images_marqo-GS-10M.txt  prompt_template_llama3_meeting_summarization.txt  prompt_template_llama3_summarization.txt  prompt_template_meeting_summarization.txt  prompt_template_mistral.txt  prompt_template_nova_convfinqa.txt  prompt_template_open_orca.txt  prompt_template_qwen.txt
fmbench/scripts/: bedrock_predictor_converseAPI.py  constants.py  custom_rest_predictor.py  deploy_w_djl_serving.py  ec2_deploy.py  ec2_metrics.py  ec2_predictor.py  eks_predictor.py  fmbench_predictor.py  jumpstart.py  openai_predictor.py  prepare_for_multi_model_containers.py  rest_predictor.py
fmbt/: pyproject.toml
img/: fmbench.drawio
llama2_tokenizer/: config.json  generation_config.json  pytorch_model.bin.index.json
misc/: ec2_instance_creation_steps.html  ec2_instance_creation_steps.md  eks_cluster-creation_steps.html  eks_cluster-creation_steps.md  the-diy-version-w-gory-details.html  the-diy-version-w-gory-details.md
scripts/: jumpstart.py  p4d_djl.py  p4d_hf_tgi.py  p4d_serving.properties  serving.properties
search/: search_index.json
site/: 404.html  advanced.html  benchmarking.html  evaluation.html  gettingstarted.html  home.html  index.html  releases.html  resources.html  results.html  sitemap.xml
site/search/: search_index.json
src/: requirements.txt
src/fmbench/: 0_setup.ipynb  1_generate_data.ipynb  1_generate_data.py  defaults.py  (+21 more)
tests/: test_pricing.py
website/: create_fmbench_website.py  index.md  mkdocs_template.yml  nginx.conf.template
(+3544 files in other folders)
